26.2 forge and neoforge fixes