@@ -7,8 +7,7 @@ jpackage --input app/build/libs/ \
   --main-jar app-all.jar \
   --main-class dev.project516.sandbox.Main \
   --type app-image \
-  --app-version 1.0.0 \
-  --java-options '--enable-preview'
+  --app-version 1.0.0
 
 zip -r sandbox-launcher.zip sandbox-launcher
 
